Map Type Update and filter scroll bug fix
Changed map length to map type, that describes the entire map.
Added filters based on "Category' and "Dimension".
Modified the styles of filter sub menu.
Finally fixed the bug, that doesn't reset the scrollbar in the sub menus, except the first one.

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -83,7 +83,8 @@
       }
 
       .sub-menu{
-        height: 165px;
+        max-height: 170px;
+        min-height: 75px;
         font-size: 95%;
         margin-top: -21px;
         margin-left: 95px;
